# cmake-project-template

./: CMakeLists.txt
src/: CMakeLists.txt  flags.cc  flags.h  main.cpp
